# cargo-eval

./: .travis.yml  Cargo.toml  README.md  build.rs
src/: app.rs  consts.rs  error.rs  file_assoc.rs  main.rs  manifest.rs  platform.rs  templates.rs  util.rs
src/templates/: default_manifest.toml  expr.rs  file.rs  loop.rs  loop_count.rs
tests/data/: script-cs-env.rs  script-invalid-doc-comment.rs
tests/tests/: expr.rs  script.rs  version.rs
tests/util/: mod.rs
