[package]
name = "cargo-eval"
version = "0.1.0  "
authors = ["Daniel Keep <daniel.keep@gmail.com>",
           "Markus Reiter <me@reitermark.us>"]

description = "A `cargo` subcommand designed to let people quickly and easily run Rust “scripts” which can make use of `cargo`'s package ecosystem."
repository = "https://github.com/reitermarkus/cargo-eval"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["cargo", "script", "eval"]
edition = "2018"

exclude = [
    "scripts/*",
    ".travis.yml",
]

[features]
default = ["suppress-cargo-output"]
suppress-cargo-output = ["chan"]

[dependencies]
chan = { version = "0.1.19", optional = true }
clap = "2.33"
env_logger = "0.4.2"
hoedown = "6.0.0"
itertools = "0.5.10" # version 0.6 incompatible with Rust < 1.12
lazy_static = "0.2.6"
log = "0.3.7"
open = "1.2.0"
regex = "0.2.1"
shaman = "0.1.0"
time = "0.1.36"
toml = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
ole32-sys = "0.2.0"
shell32-sys = "0.1.1"
uuid-sys = "0.1.2" # WARNING: do not use with rustc < 1.15
winapi = "0.2.8"
winreg = "0.4.0"

[target.'cfg(unix)'.dependencies]
atty = "0.2.2"

[dev-dependencies]
gcc = "0.3.45"
scan-rules = "0.2.0"
tempdir = "0.3.5"

[profile.release]
lto = true
