[package]
name = "cargo-eval"
version = "0.1.0  "
authors = ["Daniel Keep <daniel.keep@gmail.com>",
           "Markus Reiter <me@reitermark.us>"]

description = "A `cargo` subcommand designed to let people quickly and easily run Rust “scripts” which can make use of `cargo`'s package ecosystem."
repository = "https://github.com/reitermarkus/cargo-eval"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["cargo", "script", "eval"]
edition = "2018"

exclude = [
    "scripts/*",
    ".travis.yml",
]

[features]
default = ["suppress-cargo-output"]
suppress-cargo-output = ["chan"]

[dependencies]
chan = { version = "0.1", optional = true }
clap = "2.33"
env_logger = "0.6"
hoedown = "6.0.0"
lazy_static = "1"
log = "0.4"
open = "1.2.0"
regex = "1"
shaman = "0.1.0"
dirs = "2"
toml = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
itertools = "0.8"
winreg = "0.6"

[target.'cfg(unix)'.dependencies]
atty = "0.2.2"

[dev-dependencies]
gcc = "0.3.45"
scan-rules = "0.2.0"
tempdir = "0.3.5"

[profile.release]
lto = true
