[package]
name = "cargo-eval"
version = "0.1.0  "
authors = ["Daniel Keep <daniel.keep@gmail.com>",
           "Markus Reiter <me@reitermark.us>"]

description = "A `cargo` subcommand designed to let people quickly and easily run Rust “scripts” which can make use of `cargo`'s package ecosystem."
repository = "https://github.com/reitermarkus/cargo-eval"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["cargo", "script", "eval"]
edition = "2018"

exclude = [
    "scripts/*",
    ".travis.yml",
]

[features]
default = ["suppress-cargo-output"]
suppress-cargo-output = ["chan"]

[dependencies]
chan = { version = "0.1.23", optional = true }
clap = "2.33.0"
env_logger = "0.7.1"
pulldown-cmark = "0.7.0"
lazy_static = "1.4.0"
log = "0.4.8"
open = "1.4.0"
regex = "1.3.5"
shaman = "0.1.0"
dirs = "2.0.2"
toml = "0.5.6"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.48"

[target.'cfg(windows)'.dependencies]
itertools = "0.9.0"
winreg = "0.7.0"

[target.'cfg(unix)'.dependencies]
atty = "0.2.14"

[dev-dependencies]
gcc = "0.3.55"
scan-rules = "0.2.0"
tempdir = "0.3.7"

[profile.release]
lto = true
